slider impl, controls as a base for on screen ui controls

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "*.rh": "cpp",
+        "type_traits": "cpp"
     }
 }
